--- a/public/index.html
+++ b/public/index.html
@@ -3,38 +3,26 @@
   <head>
     <meta charset="utf-8" />
     <link rel="icon" href="%PUBLIC_URL%/favicon.ico" />
-    <!-- <meta name="viewport" content="width=device-width, initial-scale=1.0" /> -->
     <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no">
-
     <meta name="theme-color" content="#000000" />
-    <meta
-      name="description"
-      content="Web site created using create-react-app"
-    />
+    <meta name="description" content="Web site created using create-react-app"/>
     <link
   href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css"
   rel="stylesheet"
   integrity="sha384-ENjdO4Dr2bkBIFxQpeo6lK2Q6kfYw5fvb3fxOtmGxJw0nQJp5xnf66uR8aLkzZ04"
   crossorigin="anonymous"
 />
-
-    <title>React App</title>
+    <title>amazon-clone</title>
   </head>
   <body>
-    <!-- Bootstrap CSS (already likely included) -->
 <link
   href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css"
   rel="stylesheet"
 />
-
-<!-- Bootstrap Bundle JS (this enables accordion functionality) -->
 <script
   src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"
   defer
 ></script>
-
-  <!-- <body>
-    <noscript>You need to enable JavaScript to run this app.</noscript> -->
     <div id="root"></div>
   </body>
 </html>
